--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -462,10 +462,9 @@ year = {2017},
 abstract = {}, 
 url = {}}
 
-
 @Book{Mills2013,
 author = {Mills, L. S. }, 
-title = {{Conservation of Wildlife Populations: Demography, Genetics, and Management, 2nd edition}, 
+title = {Conservation of Wildlife Populations: Demography, Genetics, and Management, 2nd edition}, 
 volume = {}, 
 pages = {}, 
 editor = {}, 
@@ -473,7 +472,7 @@ edition = {},
 publisher = {Wiley-Blackwell}, 
 address = {Chichester, UK}, 
 year = {2013}, 
-abstract = {Book Description: Population ecology has matured to a sophisticated science with astonishing potential for contributing solutions to wildlife conservation and management challenges.  And yet, much of the applied power of wildlife population ecology remains untapped because its broad sweep across disparate subfields has been isolated in specialized texts.  In this book, L. Scott Mills covers the full spectrum of applied wildlife population ecology, including genomic tools for non-invasive genetic sampling, predation, population projections, climate change and invasive species, harvest modeling, viability analysis, focal species concepts, and analyses of connectivity in fragmented landscapes. With a readable style, analytical rigor, and hundreds of examples drawn from around the world, Conservation of Wildlife Populations (2$^{nd ed) provides the conceptual basis for applying population ecology to wildlife conservation decision-making.  Although targeting primarily undergraduates and beginning graduate students with some basic training in basic ecology and statistics (in majors that could include wildlife biology, conservation biology, ecology, environmental studies, and biology), the book will also be useful for practitioners in the field who want to find - in one place and with plenty of applied examples - the latest advances in the genetic and demographic aspects of population ecology. Additional resources for this book can be found at: www.wiley.com/go/mills/wildlifepopulations.}, 
+abstract = {}, 
 url = {https://www.amazon.com/Conservation-Wildlife-Populations-Demography-Management/dp/0470671491?SubscriptionId=0NM5T5X751JWT17C4GG2\&tag=sonnysoftware\&linkCode=xm2\&camp=2025\&creative=165953\&creativeASIN=0470671491}}
 
 @Book{Coale1972,
@@ -486,6 +485,19 @@ edition = {},
 publisher = {Princeton University Press}, 
 address = {Princeton, NJ, USA}, 
 year = {1972}, 
+abstract = {}, 
+url = {}}
+
+@Book{Caswell2001,
+author = {Caswell, H. }, 
+title = {Matrix population models: Construction, analysis, and interpretation}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {2nd}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2001}, 
 abstract = {}, 
 url = {}}
 
