--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -841,17 +841,9 @@ Both of these issues are addressed by formulas for birth-flow models, but such m
 Another challenge arises when demography is heterogeneous within a stage class, as when individuals grow continuously through life and survival and birth rates are size dependent.
 @Fujiwara2017 have studied this and provide new recommendations for how best to calculate "average" demographic rates within a heterogeneous stage class.
 
-Plant MPMs, while prone to qualitatively similar types of errors, differ in detail.
-In almost all cases, "newborns" are seeds; in many species, newly produced seeds have the potential to transition to two qualitatively different stages (seedlings and seed bank) in the following timestep.
-If the fertility coefficient has seed production without subsequent seed survival (and potential germination) then this creates the same error as we have described here.
-@Caswell2001, in correcting his earlier teasel model [@Werner1977] illustrates this issue; but he focuses not on the missing survival term but on the fact that the error "introduced an unrealistic delay of 1 year in the process of reproduction."
-In our experience, it is often difficult to determine whether a plant MPM has made this error, as the minimum time to germination is usually not described in the publication.
-In addition, most plant MPMs have at least some classes that are defined by size rather than stage.
-This creates a couple of challenges.
-First, an individual in a given size class can often transition to multiple other size classes, skipping a size class or even shrinking.
-In a postbreeding census model, this creates the need for complex fertility coefficients with a component for each of those transitions.
-Second, transition rates between size classes are usually estimated from the observed number of transitions; but the latter depend on the distributions of size within each size class (analogous to the distribution of age within stage discussed in the current paper), which in turn depend on the recent history of population fluctuations.
-The general solution for the latter problem is to avoid discrete size classes altogether and instead use an integral projection model [@Ellner2016a]; but the creation of IPMs requires nontrivial programming skill.
+While our analysis has focused on animal MPMs, we note that plant MPMs may be subject to similar errors as those described here.
+In addition, the construction of size-structured MPMs faces challenges that are qualitatively similar to those for stage-structured MPMs, while differing in detail; and ambiguities around the treatment of seeds and seed banks create the potential for additional errors in the fertility coefficient.
+Thus, a systematic analysis of published plant MPMs may be warranted.
 
 In conclusion, we have found that errors in constructing animal population models are widespread, that these errors can have substantial quantitative (e.g., mis-estimation of the asymptotic growth rate, $\lambda_1$) and qualitative (e.g., mis-ranking the elasticity of $\lambda_1$ to various vital rates) consequences for the conclusions reached by the MPM analysis.
 This is bad news, and shows that we cannot count on peer review to ensure correct model construction.
